<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/etName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register_bg"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register_bg"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="Age"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register_bg"
            android:textColorHint="@color/input_login_hint" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register_bg"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/bRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/white"
            android:text="@string/btn_register"
            android:textColor="@color/input_register_bg" />

        <!-- Link to Login Screen -->

    </LinearLayout>

</LinearLayout>